<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:fitsSystemWindows="true"
            android:background="@color/colorPrimary">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginTop="50dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/change_password_form"
            android:visibility="gone"
            tools:visibility="visible"
            android:focusableInTouchMode="true">

            <!-- Password Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextLabel"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
                <EditText android:id="@+id/current_password"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:textColor="@color/white"
                          android:theme="@style/TextLabel"
                          android:inputType="textVisiblePassword"
                          android:hint="@string/old_password"/>
            </android.support.design.widget.TextInputLayout>

            <!-- Password Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextLabel"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
                <EditText android:id="@+id/new_password"
                          android:nextFocusLeft="@id/new_password"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:textColor="@color/white"
                          android:theme="@style/TextLabel"
                          android:inputType="textVisiblePassword"
                          android:hint="@string/new_password"/>
            </android.support.design.widget.TextInputLayout>


            <!-- Password Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextLabel"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
                <EditText android:id="@+id/confirm_new_password"
                          android:nextFocusUp="@id/confirm_new_password"
                          android:nextFocusLeft="@id/confirm_new_password"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:textColor="@color/white"
                          android:theme="@style/TextLabel"
                          android:inputType="textVisiblePassword"
                          android:hint="@string/confirm_new_password"/>
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:focusableInTouchMode="true"
            android:visibility="gone"
            tools:visibility="visible"
            android:id="@+id/update_email_form">

            <!-- Email Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextLabel"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
                <EditText android:id="@+id/change_email_input"
                          android:nextFocusUp="@id/change_email_input"
                          android:nextFocusLeft="@id/change_email_input"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:textColor="@color/white"
                          android:inputType="textEmailAddress"
                          android:theme="@style/TextLabel"
                          android:hint="@string/new_email" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <com.tsl.creditcircle.utils.viewhelper.ActionProcessButtonChangeText
            android:id="@+id/submit_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="8dp"
            android:padding="12dp"
            android:background="@color/colorPrimaryDark"
            tools:text="@string/change_password"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textAllCaps="false"
            android:visibility="gone"
            tools:visibility="visible"
            app:pb_colorComplete="@color/colorPrimary"
            app:pb_colorNormal="@color/colorAccent"
            app:pb_colorPressed="@color/colorAccent"
            app:pb_textComplete="@string/successful"
            app:pb_textProgress="@string/updating" />

    </LinearLayout>
</ScrollView>